--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mail</title>
-    <script src="SweetAlert2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="sweetalert2.all.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
