Selectors are working now

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="sidebar-folders-navigation-new-folder-container">
         <button class="sidebar-folders-navigation-new-folder" onclick="createFolder();">
-                <span class="sidebar-folders-navigation-new-folder-text">Создать папку</span>
+            <span class="sidebar-folders-navigation-new-folder-text">Создать папку</span>
         </button>
     </div>
     <div class="sidebar-folders-navigation-new-folder-name-container">
@@ -70,7 +70,7 @@
     <div class="mailbox-control-panel">
         <input type="checkbox" id="selectAllButton" onclick="selectAllLetters()">
     </div>
-    <div class="mailbox">
+    <div class="mailbox" id="mailbox">
     </div>
 </div>
 </div>
