--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 <div class="mailbox-container">
     <div class="mailbox-control-panel">
         <input type="checkbox" id="selectAllButton" onclick="selectAllLetters()">
+        <button class="mailbox-control-panel-delete-button" id="deleteButton" onclick="deleteSelectedLetters();">
+            <span>Удалить письма</span>
+        </button>
     </div>
     <div class="mailbox" id="mailbox">
     </div>
